--- a/panel_config.json
+++ b/panel_config.json
@@ -3,11 +3,18 @@
         "rows": "2",
         "cols": "5"
     },
-    "tabs": {
-        "type": "none"
-    },
     "cuts": {
         "type": "vcuts",
         "layer": "User.1"
+    },
+    "framing": {
+        "type": "railstb",
+        "vspace": "0mm",
+        "maxtotalheight": "10cm"
+    },
+    "tooling": {
+        "type": "4hole",
+        "hoffset": "2.5mm",
+        "voffset": "2.5mm"
     }
 }
